--- a/_config.yml
+++ b/_config.yml
@@ -10,21 +10,21 @@
 locale                   : "en-US"
 title                    : "Chenrui Ma's Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Chenrui Ma"
 description              : &description "personal description"
 url                      : https://merry7cherry.github.io/cherry-Ma # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://merry7cherry.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "eat-page.png"
   name             : "Chenrui Ma"
   pronouns         : # example: "she/her"  
-  bio              : "a Senior student at UCI, majoring in computer science."
+  bio              : "A senior student at UCI, majoring in computer science."
   location         : "Irvine, CA, USA"
   employer         : "University of California, Irvine"
   uri              : # URL
